[project]
name = "lm-test"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Irie Aoi", email = "eai@mizle.net" }]
dependencies = [
    "transformers>=4.33.2",
    "sentencepiece>=0.1.99",
    "protobuf>=4.24.3",
    "torch==2.0.1+cu118",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
type = "index"

[tool.hatch.metadata]
allow-direct-references = true
